Added Docker configuration using sbt-native-packager. Changed Future syntax.